// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RigComponent /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          error={undefined}
          openConfigurationsHandler={[Function]}
          openProductManagementHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <div>
          <ExtensionViewContainer
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={Array []}
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
          />
          <Console />
</div>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "error": undefined,
          "openConfigurationsHandler": [Function],
          "openProductManagementHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExtensionViewContainer
              deleteExtensionViewHandler={[Function]}
              extensionViews={Array []}
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
/>,
            false,
            false,
            false,
            false,
            <Console />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "deleteExtensionViewHandler": [Function],
              "extensionViews": Array [],
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            error={undefined}
            openConfigurationsHandler={[Function]}
            openProductManagementHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <div>
            <ExtensionViewContainer
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={Array []}
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
            />
            <Console />
</div>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "error": undefined,
            "openConfigurationsHandler": [Function],
            "openProductManagementHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExtensionViewContainer
                deleteExtensionViewHandler={[Function]}
                extensionViews={Array []}
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
/>,
              false,
              false,
              false,
              false,
              <Console />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "deleteExtensionViewHandler": [Function],
                "extensionViews": Array [],
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<RigComponent /> renders extension view correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          error={undefined}
          openConfigurationsHandler={[Function]}
          openProductManagementHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <div>
          <ExtensionViewContainer
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={
                              Array [
                                        Object {
                                          "channelId": "twitch",
                                          "extension": Object {
                                            "authorName": "test",
                                            "bitsEnabled": false,
                                            "clientId": "mockClientId",
                                            "description": "description",
                                            "iconUrl": "iconUrl",
                                            "id": "id",
                                            "name": "name",
                                            "requestIdentityLink": false,
                                            "sku": "sku",
                                            "state": "Released",
                                            "summary": "summary",
                                            "token": "token",
                                            "vendorCode": "vendorCode",
                                            "version": "0.1",
                                            "views": Object {
                                              "component": Object {
                                                "aspectHeight": 3000,
                                                "aspectWidth": 2500,
                                                "canLinkExternalContent": false,
                                                "viewerUrl": "test",
                                                "zoom": false,
                                                "zoomPixels": 100,
                                              },
                                              "config": Object {
                                                "canLinkExternalContent": false,
                                                "viewerUrl": "test",
                                              },
                                              "liveConfig": Object {
                                                "canLinkExternalContent": false,
                                                "viewerUrl": "test",
                                              },
                                              "mobile": Object {
                                                "viewerUrl": "test",
                                              },
                                              "panel": Object {
                                                "canLinkExternalContent": false,
                                                "height": 300,
                                                "viewerUrl": "test",
                                              },
                                              "videoOverlay": Object {
                                                "canLinkExternalContent": false,
                                                "viewerUrl": "test",
                                              },
                                            },
                                            "whitelistedConfigUrls": Array [
                                              "foo",
                                            ],
                                            "whitelistedPanelUrls": Array [
                                              "bar",
                                            ],
                                          },
                                          "features": Object {
                                            "isChatEnabled": true,
                                          },
                                          "id": "1",
                                          "isPopout": false,
                                          "linked": false,
                                          "mode": "viewer",
                                          "orientation": "Portrait",
                                          "role": "Logged-Out Viewer",
                                          "type": "Panel",
                                          "x": 0,
                                          "y": 0,
                                        },
                                      ]
                    }
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
          />
          <Console />
</div>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "error": undefined,
          "openConfigurationsHandler": [Function],
          "openProductManagementHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExtensionViewContainer
              deleteExtensionViewHandler={[Function]}
              extensionViews={
                            Array [
                                          Object {
                                            "channelId": "twitch",
                                            "extension": Object {
                                              "authorName": "test",
                                              "bitsEnabled": false,
                                              "clientId": "mockClientId",
                                              "description": "description",
                                              "iconUrl": "iconUrl",
                                              "id": "id",
                                              "name": "name",
                                              "requestIdentityLink": false,
                                              "sku": "sku",
                                              "state": "Released",
                                              "summary": "summary",
                                              "token": "token",
                                              "vendorCode": "vendorCode",
                                              "version": "0.1",
                                              "views": Object {
                                                "component": Object {
                                                  "aspectHeight": 3000,
                                                  "aspectWidth": 2500,
                                                  "canLinkExternalContent": false,
                                                  "viewerUrl": "test",
                                                  "zoom": false,
                                                  "zoomPixels": 100,
                                                },
                                                "config": Object {
                                                  "canLinkExternalContent": false,
                                                  "viewerUrl": "test",
                                                },
                                                "liveConfig": Object {
                                                  "canLinkExternalContent": false,
                                                  "viewerUrl": "test",
                                                },
                                                "mobile": Object {
                                                  "viewerUrl": "test",
                                                },
                                                "panel": Object {
                                                  "canLinkExternalContent": false,
                                                  "height": 300,
                                                  "viewerUrl": "test",
                                                },
                                                "videoOverlay": Object {
                                                  "canLinkExternalContent": false,
                                                  "viewerUrl": "test",
                                                },
                                              },
                                              "whitelistedConfigUrls": Array [
                                                "foo",
                                              ],
                                              "whitelistedPanelUrls": Array [
                                                "bar",
                                              ],
                                            },
                                            "features": Object {
                                              "isChatEnabled": true,
                                            },
                                            "id": "1",
                                            "isPopout": false,
                                            "linked": false,
                                            "mode": "viewer",
                                            "orientation": "Portrait",
                                            "role": "Logged-Out Viewer",
                                            "type": "Panel",
                                            "x": 0,
                                            "y": 0,
                                          },
                                        ]
              }
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
/>,
            false,
            false,
            false,
            false,
            <Console />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "deleteExtensionViewHandler": [Function],
              "extensionViews": Array [
                Object {
                  "channelId": "twitch",
                  "extension": Object {
                    "authorName": "test",
                    "bitsEnabled": false,
                    "clientId": "mockClientId",
                    "description": "description",
                    "iconUrl": "iconUrl",
                    "id": "id",
                    "name": "name",
                    "requestIdentityLink": false,
                    "sku": "sku",
                    "state": "Released",
                    "summary": "summary",
                    "token": "token",
                    "vendorCode": "vendorCode",
                    "version": "0.1",
                    "views": Object {
                      "component": Object {
                        "aspectHeight": 3000,
                        "aspectWidth": 2500,
                        "canLinkExternalContent": false,
                        "viewerUrl": "test",
                        "zoom": false,
                        "zoomPixels": 100,
                      },
                      "config": Object {
                        "canLinkExternalContent": false,
                        "viewerUrl": "test",
                      },
                      "liveConfig": Object {
                        "canLinkExternalContent": false,
                        "viewerUrl": "test",
                      },
                      "mobile": Object {
                        "viewerUrl": "test",
                      },
                      "panel": Object {
                        "canLinkExternalContent": false,
                        "height": 300,
                        "viewerUrl": "test",
                      },
                      "videoOverlay": Object {
                        "canLinkExternalContent": false,
                        "viewerUrl": "test",
                      },
                    },
                    "whitelistedConfigUrls": Array [
                      "foo",
                    ],
                    "whitelistedPanelUrls": Array [
                      "bar",
                    ],
                  },
                  "features": Object {
                    "isChatEnabled": true,
                  },
                  "id": "1",
                  "isPopout": false,
                  "linked": false,
                  "mode": "viewer",
                  "orientation": "Portrait",
                  "role": "Logged-Out Viewer",
                  "type": "Panel",
                  "x": 0,
                  "y": 0,
                },
              ],
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            error={undefined}
            openConfigurationsHandler={[Function]}
            openProductManagementHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <div>
            <ExtensionViewContainer
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={
                                    Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "extension": Object {
                                                    "authorName": "test",
                                                    "bitsEnabled": false,
                                                    "clientId": "mockClientId",
                                                    "description": "description",
                                                    "iconUrl": "iconUrl",
                                                    "id": "id",
                                                    "name": "name",
                                                    "requestIdentityLink": false,
                                                    "sku": "sku",
                                                    "state": "Released",
                                                    "summary": "summary",
                                                    "token": "token",
                                                    "vendorCode": "vendorCode",
                                                    "version": "0.1",
                                                    "views": Object {
                                                      "component": Object {
                                                        "aspectHeight": 3000,
                                                        "aspectWidth": 2500,
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                        "zoom": false,
                                                        "zoomPixels": 100,
                                                      },
                                                      "config": Object {
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                      },
                                                      "liveConfig": Object {
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                      },
                                                      "mobile": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "panel": Object {
                                                        "canLinkExternalContent": false,
                                                        "height": 300,
                                                        "viewerUrl": "test",
                                                      },
                                                      "videoOverlay": Object {
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                      },
                                                    },
                                                    "whitelistedConfigUrls": Array [
                                                      "foo",
                                                    ],
                                                    "whitelistedPanelUrls": Array [
                                                      "bar",
                                                    ],
                                                  },
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "mode": "viewer",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                        }
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
            />
            <Console />
</div>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "error": undefined,
            "openConfigurationsHandler": [Function],
            "openProductManagementHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExtensionViewContainer
                deleteExtensionViewHandler={[Function]}
                extensionViews={
                                Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "extension": Object {
                                                    "authorName": "test",
                                                    "bitsEnabled": false,
                                                    "clientId": "mockClientId",
                                                    "description": "description",
                                                    "iconUrl": "iconUrl",
                                                    "id": "id",
                                                    "name": "name",
                                                    "requestIdentityLink": false,
                                                    "sku": "sku",
                                                    "state": "Released",
                                                    "summary": "summary",
                                                    "token": "token",
                                                    "vendorCode": "vendorCode",
                                                    "version": "0.1",
                                                    "views": Object {
                                                      "component": Object {
                                                        "aspectHeight": 3000,
                                                        "aspectWidth": 2500,
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                        "zoom": false,
                                                        "zoomPixels": 100,
                                                      },
                                                      "config": Object {
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                      },
                                                      "liveConfig": Object {
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                      },
                                                      "mobile": Object {
                                                        "viewerUrl": "test",
                                                      },
                                                      "panel": Object {
                                                        "canLinkExternalContent": false,
                                                        "height": 300,
                                                        "viewerUrl": "test",
                                                      },
                                                      "videoOverlay": Object {
                                                        "canLinkExternalContent": false,
                                                        "viewerUrl": "test",
                                                      },
                                                    },
                                                    "whitelistedConfigUrls": Array [
                                                      "foo",
                                                    ],
                                                    "whitelistedPanelUrls": Array [
                                                      "bar",
                                                    ],
                                                  },
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "mode": "viewer",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                }
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
/>,
              false,
              false,
              false,
              false,
              <Console />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "deleteExtensionViewHandler": [Function],
                "extensionViews": Array [
                  Object {
                    "channelId": "twitch",
                    "extension": Object {
                      "authorName": "test",
                      "bitsEnabled": false,
                      "clientId": "mockClientId",
                      "description": "description",
                      "iconUrl": "iconUrl",
                      "id": "id",
                      "name": "name",
                      "requestIdentityLink": false,
                      "sku": "sku",
                      "state": "Released",
                      "summary": "summary",
                      "token": "token",
                      "vendorCode": "vendorCode",
                      "version": "0.1",
                      "views": Object {
                        "component": Object {
                          "aspectHeight": 3000,
                          "aspectWidth": 2500,
                          "canLinkExternalContent": false,
                          "viewerUrl": "test",
                          "zoom": false,
                          "zoomPixels": 100,
                        },
                        "config": Object {
                          "canLinkExternalContent": false,
                          "viewerUrl": "test",
                        },
                        "liveConfig": Object {
                          "canLinkExternalContent": false,
                          "viewerUrl": "test",
                        },
                        "mobile": Object {
                          "viewerUrl": "test",
                        },
                        "panel": Object {
                          "canLinkExternalContent": false,
                          "height": 300,
                          "viewerUrl": "test",
                        },
                        "videoOverlay": Object {
                          "canLinkExternalContent": false,
                          "viewerUrl": "test",
                        },
                      },
                      "whitelistedConfigUrls": Array [
                        "foo",
                      ],
                      "whitelistedPanelUrls": Array [
                        "bar",
                      ],
                    },
                    "features": Object {
                      "isChatEnabled": true,
                    },
                    "id": "1",
                    "isPopout": false,
                    "linked": false,
                    "mode": "viewer",
                    "orientation": "Portrait",
                    "role": "Logged-Out Viewer",
                    "type": "Panel",
                    "x": 0,
                    "y": 0,
                  },
                ],
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
